# grandlite

./: README.md  pyproject.toml
docs/: Conversion.md  Cypher.md  DotMotif.md  Graph-Statistics.md  Input-Formats.md  Output-Formats.md  README.md  Saving.md
grandlite/: __init__.py  prompts.py  types.py
